--- a/app/package.json
+++ b/app/package.json
@@ -23,5 +23,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@project-serum/anchor": "^0.25.0"
+	}
 }
